<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboard_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/keyboardBackColor"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:keyBackground="@drawable/keyboard_key"
            android:keyTextColor="@color/white"
            android:keyTextSize="@dimen/sp_14"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:shadowRadius="0.0"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyboard_chooser" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keyboard_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/keyboardBackColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/keyboard_view"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
              android:paddingLeft="@dimen/dp_10"
              android:paddingTop="@dimen/dp_5"
              android:paddingRight="@dimen/dp_10"
              android:paddingBottom="@dimen/dp_5"
                android:text="@string/title_number"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                app:layout_constraintRight_toLeftOf="@+id/tv_symbol"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_symbol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
              android:paddingLeft="@dimen/dp_10"
              android:paddingTop="@dimen/dp_5"
              android:paddingRight="@dimen/dp_10"
              android:paddingBottom="@dimen/dp_5"
                android:text="@string/title_symbol"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                app:layout_constraintRight_toLeftOf="@+id/tv_letter"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/title_letter"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>